handling more outcomes

--- a/test_O.ipynb
+++ b/test_O.ipynb
@@ -119,16 +119,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['X' ' ' 'O']\n",
-      " [' ' 'X' 'O']\n",
-      " ['X' ' ' 'O']]\n",
-      "win O ((0, 2), (1, 2), (2, 2))\n"
+      "[['O' 'X' 'O']\n",
+      " ['X' 'X' 'O']\n",
+      " ['X' 'O' 'X']]\n",
+      "withdraw X None\n"
      ]
     }
    ],
    "source": [
-    "it = cycle((\"X\", \"O\"))\n",
     "print(show_board(board, \"X\"))\n",
+    "it = cycle((\"X\", \"O\"))\n",
     "while True:\n",
     "    clear_output(wait=True)\n",
     "    player = next(it)\n",
