reducing number of episodes; showing mistakes evolution

--- a/test_O.ipynb
+++ b/test_O.ipynb
@@ -121,13 +121,14 @@
      "text": [
       "[['O' 'X' 'O']\n",
       " ['X' 'X' 'O']\n",
-      " ['X' 'O' 'X']]\n",
+      " ['X' 'O' 'X']] \n",
+      "Agent: O\n",
       "withdraw X None\n"
      ]
     }
    ],
    "source": [
-    "print(show_board(board, \"X\"))\n",
+    "print(show_board(board, \"O\"), f\"\\nAgent: O\")\n",
     "it = cycle((\"X\", \"O\"))\n",
     "while True:\n",
     "    clear_output(wait=True)\n",
@@ -139,7 +140,7 @@
     "        state = torch.from_numpy(board).float().unsqueeze(0).to(device)\n",
     "        action = np.argmax(model(state).cpu().data.numpy())\n",
     "    outcome, board, row = check_outcome(board, action, SHAPE, ROW_SIZE)\n",
-    "    print(show_board(board, player))\n",
+    "    print(show_board(board, player), f\"\\nAgent: O\")\n",
     "    if outcome:\n",
     "        print(outcome, player, row)\n",
     "        break"
