--- a/test_X.ipynb
+++ b/test_X.ipynb
@@ -119,15 +119,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['X' 'X' 'O']\n",
-      " ['X' 'O' ' ']\n",
-      " ['X' ' ' 'O']]\n",
-      "win X ((0, 0), (1, 0), (2, 0))\n"
+      "[['O' 'X' ' ']\n",
+      " ['O' 'X' ' ']\n",
+      " [' ' 'X' ' ']] \n",
+      "Agent: X\n",
+      "win X ((0, 1), (1, 1), (2, 1))\n"
      ]
     }
    ],
    "source": [
-    "print(show_board(board, \"X\"))\n",
+    "print(show_board(board, \"X\"), f\"\\nAgent: X\")\n",
     "it = cycle((\"X\", \"O\"))\n",
     "while True:\n",
     "    clear_output(wait=True)\n",
@@ -139,7 +140,7 @@
     "        state = torch.from_numpy(board).float().unsqueeze(0).to(device)\n",
     "        action = np.argmax(model(state).cpu().data.numpy())\n",
     "    outcome, board, row = check_outcome(board, action, SHAPE, ROW_SIZE)\n",
-    "    print(show_board(board, player))\n",
+    "    print(show_board(board, player), f\"\\nAgent: X\")\n",
     "    if outcome:\n",
     "        print(outcome, player, row)\n",
     "        break"
