--- a/test_X.ipynb
+++ b/test_X.ipynb
@@ -6,44 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import clear_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from itertools import cycle\n",
     "import torch\n",
-    "from model import QNetwork\n",
+    "from agent import Agent\n",
+    "from interface import Interface\n",
     "from utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def show_board(board, player):\n",
-    "    X = 1 if player == \"X\" else -1\n",
-    "\n",
-    "    visual = []\n",
-    "    for b in board:\n",
-    "        if b == 0:\n",
-    "            visual.append(\" \")\n",
-    "        elif b == X:\n",
-    "            visual.append(\"X\")\n",
-    "        else:\n",
-    "            visual.append(\"O\")\n",
-    "    return np.reshape(visual, SHAPE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "board = np.array([0] * BOARD_SIZE).astype(np.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +34,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,66 +46,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "QNetwork(\n",
-       "  (fc1): Linear(in_features=9, out_features=256, bias=True)\n",
-       "  (bn1): BatchNorm1d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (fc2): Linear(in_features=256, out_features=128, bias=True)\n",
-       "  (bn2): BatchNorm1d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-       "  (fc3): Linear(in_features=128, out_features=9, bias=True)\n",
-       ")"
+       "X"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = QNetwork(BOARD_SIZE, BOARD_SIZE)\n",
-    "model.load_state_dict(torch.load(\"X.pth\"))\n",
-    "model.eval()"
+    "agent = Agent(symbol=\"X\", state_size=BOARD_SIZE, action_size=BOARD_SIZE, device=device, filename=\"X.pth\")\n",
+    "agent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['O' 'X' ' ']\n",
-      " ['O' 'X' ' ']\n",
-      " [' ' 'X' ' ']] \n",
-      "Agent: X\n",
-      "win X ((0, 1), (1, 1), (2, 1))\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7242f915bb9f41b1866e969bd0f99f24",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(height=300, width=600)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "print(show_board(board, \"X\"), f\"\\nAgent: X\")\n",
-    "it = cycle((\"X\", \"O\"))\n",
-    "while True:\n",
-    "    clear_output(wait=True)\n",
-    "    player = next(it)\n",
-    "    board = board * -1\n",
-    "    if player == \"O\":\n",
-    "        action = int(input(\"Position (0-8):\"))\n",
-    "    else:\n",
-    "        state = torch.from_numpy(board).float().unsqueeze(0).to(device)\n",
-    "        action = np.argmax(model(state).cpu().data.numpy())\n",
-    "    outcome, board, row = check_outcome(board, action, SHAPE, ROW_SIZE)\n",
-    "    print(show_board(board, player), f\"\\nAgent: X\")\n",
-    "    if outcome:\n",
-    "        print(outcome, player, row)\n",
-    "        break"
+    "interface = Interface(agent)"
    ]
   }
  ],
@@ -152,7 +97,7 @@
    "hash": "18091ef0bff38adffa3dfca76b4a8ac7dd06bfadc0b669f6b6b9d4093f64f004"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.9 64-bit ('drl-python-3.9.9': pyenv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -167,8 +112,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.9"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
